// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`subscription.sql > line 18 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 23 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'testconn' PUBLICATION testpub",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "testconn",
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 26 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION foo, testpub, foo WITH (connect = false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 113,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "foo",
                },
              },
              {
                "String": {
                  "sval": "testpub",
                },
              },
              {
                "String": {
                  "sval": "foo",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 29 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 31 1`] = `
[
  "COMMENT ON SUBSCRIPTION regress_testsub IS 'test subscription'",
  {
    "stmts": [
      {
        "stmt": {
          "CommentStmt": {
            "comment": "test subscription",
            "object": {
              "String": {
                "sval": "regress_testsub",
              },
            },
            "objtype": "OBJECT_SUBSCRIPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 36 1`] = `
[
  "SELECT subname, stats_reset IS NULL stats_reset_is_null FROM pg_stat_subscription_stats WHERE subname = 'regress_testsub'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 61,
                  "relname": "pg_stat_subscription_stats",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "subname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 16,
                  "name": "stats_reset_is_null",
                  "val": {
                    "NullTest": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "stats_reset",
                              },
                            },
                          ],
                          "location": 16,
                        },
                      },
                      "location": 28,
                      "nulltesttype": "IS_NULL",
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "subname",
                        },
                      },
                    ],
                    "location": 94,
                  },
                },
                "location": 102,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 104,
                    "sval": {
                      "sval": "regress_testsub",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 49 1`] = `
[
  "SET SESSION AUTHORIZATION 'regress_subscription_user2'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 26,
                  "sval": {
                    "sval": "regress_subscription_user2",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 54 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub2 CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, copy_data = true)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 104,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy_data",
                  "location": 121,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 64 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub3 CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (slot_name = NONE, connect = false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "none",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "slot_name",
                  "location": 104,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 122,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub3",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 66 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub3 ENABLE",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_ENABLED",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "enabled",
                },
              },
            ],
            "subname": "regress_testsub3",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 70 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub4 CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (slot_name = NONE, connect = false, origin = foo)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "none",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "slot_name",
                  "location": 104,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 122,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 148,
                      "names": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "origin",
                  "location": 139,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub4",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 73 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub4 CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (slot_name = NONE, connect = false, origin = none)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "none",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "slot_name",
                  "location": 104,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 122,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "none",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "origin",
                  "location": 139,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub4",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 75 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub4 SET (origin = any)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_OPTIONS",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "any",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "origin",
                  "location": 41,
                },
              },
            ],
            "subname": "regress_testsub4",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 82 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub5 CONNECTION 'i_dont_exist=param' PUBLICATION testpub",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "i_dont_exist=param",
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub5",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 86 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub5 CONNECTION 'port=-1' PUBLICATION testpub",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "port=-1",
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub5",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 89 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub CONNECTION 'foobar'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "conninfo": "foobar",
            "kind": "ALTER_SUBSCRIPTION_CONNECTION",
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 104 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub SET (slot_name = '')",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_OPTIONS",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "slot_name",
                  "location": 40,
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 107 1`] = `
[
  "ALTER SUBSCRIPTION regress_doesnotexist CONNECTION 'dbname=regress_doesnotexist2'",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist2",
            "kind": "ALTER_SUBSCRIPTION_CONNECTION",
            "subname": "regress_doesnotexist",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 111 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub SKIP (lsn = '0/12345')",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_SKIP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "0/12345",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "lsn",
                  "location": 41,
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 119 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub SKIP (lsn = '0/0')",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_SKIP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "0/0",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "lsn",
                  "location": 41,
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 135 1`] = `
[
  "SET ROLE regress_subscription_user_dummy",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 9,
                  "sval": {
                    "sval": "regress_subscription_user_dummy",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 139 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub RENAME TO regress_testsub_foo",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "regress_testsub_foo",
            "object": {
              "String": {
                "sval": "regress_testsub",
              },
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_SUBSCRIPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 149 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub OWNER TO regress_subscription_user2",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOwnerStmt": {
            "newowner": {
              "location": 44,
              "rolename": "regress_subscription_user2",
              "roletype": "ROLESPEC_CSTRING",
            },
            "object": {
              "String": {
                "sval": "regress_testsub",
              },
            },
            "objectType": "OBJECT_SUBSCRIPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 156 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub SET (slot_name = NONE)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_OPTIONS",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "none",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "slot_name",
                  "location": 40,
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 163 1`] = `
[
  "DROP SUBSCRIPTION IF EXISTS regress_testsub",
  {
    "stmts": [
      {
        "stmt": {
          "DropSubscriptionStmt": {
            "behavior": "DROP_RESTRICT",
            "missing_ok": true,
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 164 1`] = `
[
  "  -- fail

-- fail - binary must be boolean
CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, binary = foo)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 147,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 173,
                      "names": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "binary",
                  "location": 164,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 170 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, binary = true)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "binary",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 182 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, streaming = foo)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 132,
                      "names": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "streaming",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 185 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, streaming = true)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "streaming",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 202 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub ADD PUBLICATION testpub1, testpub1 WITH (refresh = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_ADD_PUBLICATION",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "refresh",
                  "location": 76,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub1",
                },
              },
              {
                "String": {
                  "sval": "testpub1",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 205 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub ADD PUBLICATION testpub1, testpub2 WITH (refresh = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_ADD_PUBLICATION",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "refresh",
                  "location": 76,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub1",
                },
              },
              {
                "String": {
                  "sval": "testpub2",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 216 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub DROP PUBLICATION testpub, testpub1, testpub2 WITH (refresh = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_DROP_PUBLICATION",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "refresh",
                  "location": 86,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
              {
                "String": {
                  "sval": "testpub1",
                },
              },
              {
                "String": {
                  "sval": "testpub2",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 219 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub DROP PUBLICATION testpub3 WITH (refresh = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_DROP_PUBLICATION",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "refresh",
                  "location": 67,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub3",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 222 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub DROP PUBLICATION testpub1, testpub2 WITH (refresh = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_DROP_PUBLICATION",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "refresh",
                  "location": 77,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub1",
                },
              },
              {
                "String": {
                  "sval": "testpub2",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 228 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION mypub
       WITH (connect = false, create_slot = false, copy_data = false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 108,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "create_slot",
                  "location": 125,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "copy_data",
                  "location": 146,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "mypub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 231 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub ENABLE",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_ENABLED",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "enabled",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 243 1`] = `
[
  "CREATE FUNCTION func() RETURNS VOID AS
$$ ALTER SUBSCRIPTION regress_testsub SET PUBLICATION mypub WITH (refresh = true) $$ LANGUAGE SQL",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "func",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " ALTER SUBSCRIPTION regress_testsub SET PUBLICATION mypub WITH (refresh = true) ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 36,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 124,
                },
              },
            ],
            "returnType": {
              "location": 31,
              "names": [
                {
                  "String": {
                    "sval": "void",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 247 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub DISABLE",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_ENABLED",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": false,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "enabled",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 253 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, two_phase = foo)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 132,
                      "names": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "two_phase",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 256 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, two_phase = true)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "two_phase",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 263 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub SET (streaming = true)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterSubscriptionStmt": {
            "kind": "ALTER_SUBSCRIPTION_OPTIONS",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "streaming",
                  "location": 40,
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 271 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, streaming = true, two_phase = true)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "streaming",
                  "location": 120,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "two_phase",
                  "location": 138,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 279 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, disable_on_error = foo)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 139,
                      "names": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "disable_on_error",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 282 1`] = `
[
  "CREATE SUBSCRIPTION regress_testsub CONNECTION 'dbname=regress_doesnotexist' PUBLICATION testpub WITH (connect = false, disable_on_error = false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSubscriptionStmt": {
            "conninfo": "dbname=regress_doesnotexist",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "connect",
                  "location": 103,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "disable_on_error",
                  "location": 120,
                },
              },
            ],
            "publication": [
              {
                "String": {
                  "sval": "testpub",
                },
              },
            ],
            "subname": "regress_testsub",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 300 1`] = `
[
  "RESET SESSION AUTHORIZATION",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "session_authorization",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 318 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub OWNER TO regress_subscription_user",
  {
    "stmts": [
      {
        "stmt": {
          "AlterOwnerStmt": {
            "newowner": {
              "location": 44,
              "rolename": "regress_subscription_user",
              "roletype": "ROLESPEC_CSTRING",
            },
            "object": {
              "String": {
                "sval": "regress_testsub",
              },
            },
            "objectType": "OBJECT_SUBSCRIPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`subscription.sql > line 321 1`] = `
[
  "ALTER SUBSCRIPTION regress_testsub RENAME TO regress_testsub2",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "regress_testsub2",
            "object": {
              "String": {
                "sval": "regress_testsub",
              },
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_SUBSCRIPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
